[gd_scene load_steps=38 format=2]

[ext_resource path="res://art/SlimeB.png" type="Texture" id=1]
[ext_resource path="res://hithurt/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://entity/Slime.gd" type="Script" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://entity/PlayerDetectZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://hithurt/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://hithurt/SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://entity/WanderController.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 208, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 272, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 304, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 336, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 352, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 176, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "death",
"speed": 6.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "move",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=21]
radius = 4.0
height = 6.0

[sub_resource type="CircleShape2D" id=46]
radius = 34.0588

[sub_resource type="CapsuleShape2D" id=22]
radius = 6.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=47]
radius = 5.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=48]
radius = 3.0
height = 10.0

[node name="Slime" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 20 )
animation = "move"
frame = 4
offset = Vector2( 0, -6 )
__meta__ = {
"_aseprite_wizard_config_": {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": true,
"source": ""
}
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
rotation = 1.5708
shape = SubResource( 21 )

[node name="PlayerDetectZone" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="PlayerDetectZone" index="0"]
shape = SubResource( 46 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -6 )
shape = SubResource( 22 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 3

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -5 )
shape = SubResource( 47 )

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
rotation = 1.5708
shape = SubResource( 48 )

[node name="WanderController" parent="." instance=ExtResource( 8 )]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_Hurtbox_area_exited"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="PlayerDetectZone"]
[editable path="Hurtbox"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
